# pre-commit-hook-cpp-for-comment-on-include

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
cpp_for_comment_on_include/: cpp_for_comment_on_include.py
