[metadata]
name = cpp_for_comment_on_includes
version = 1.0.0
description = pre-commit hook to check the presence of for comments on includes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SalvoVirga/pre-commit-hook-cpp-for-comment-on-include
author = Salvo Virga
author_email = salvo.virga@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cpp-for-comment-on-include = cpp_for_comment_on_include.cpp_for_comment_on_include:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false